--- a/latex/files.tex
+++ b/latex/files.tex
@@ -8,6 +8,7 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{power\+\_\+method/\mbox{\hyperlink{eigen__solver__base_8hpp_source}{eigen\+\_\+solver\+\_\+base.\+hpp}} }{\pageref{eigen__solver__base_8hpp_source}}{}
 \item\contentsline{section}{power\+\_\+method/\mbox{\hyperlink{power__solver_8hpp_source}{power\+\_\+solver.\+hpp}} }{\pageref{power__solver_8hpp_source}}{}
 \item\contentsline{section}{power\+\_\+method/\mbox{\hyperlink{shifted__inverse__power__solver_8hpp_source}{shifted\+\_\+inverse\+\_\+power\+\_\+solver.\+hpp}} }{\pageref{shifted__inverse__power__solver_8hpp_source}}{}
+\item\contentsline{section}{power\+\_\+method/\mbox{\hyperlink{solve__shifted_8hpp}{solve\+\_\+shifted.\+hpp}} \\*Solve the shifted linear system (A -\/ λ I) x = b using Eigen }{\pageref{solve__shifted_8hpp}}{}
 \item\contentsline{section}{qr\+\_\+method/\mbox{\hyperlink{qr__factoriser_8hpp_source}{qr\+\_\+factoriser.\+hpp}} }{\pageref{qr__factoriser_8hpp_source}}{}
 \item\contentsline{section}{qr\+\_\+method/\mbox{\hyperlink{qr__method_8hpp_source}{qr\+\_\+method.\+hpp}} }{\pageref{qr__method_8hpp_source}}{}
 \item\contentsline{section}{result/\mbox{\hyperlink{eigen__result_8hpp_source}{eigen\+\_\+result.\+hpp}} }{\pageref{eigen__result_8hpp_source}}{}
