--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -232,6 +232,8 @@
 \input{eigen__solver__base_8hpp_source}
 \input{power__solver_8hpp_source}
 \input{shifted__inverse__power__solver_8hpp_source}
+\input{solve__shifted_8hpp}
+\input{solve__shifted_8hpp_source}
 \input{qr__factoriser_8hpp_source}
 \input{qr__method_8hpp_source}
 \input{eigen__result_8hpp_source}
