--- a/latex/shifted__option_8hpp_source.tex
+++ b/latex/shifted__option_8hpp_source.tex
@@ -4,13 +4,15 @@
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00002\ }
-\DoxyCodeLine{00018\ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ Scalar>}
-\DoxyCodeLine{00019\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structShiftedOptions}{ShiftedOptions}}\ \{}
-\DoxyCodeLine{00021\ \ \ \ \ \mbox{\hyperlink{classMatrix}{Scalar}}\ \mbox{\hyperlink{structShiftedOptions_a3ab5be84578ea7326005a45160fdc7cd}{shift}};}
-\DoxyCodeLine{00022\ }
-\DoxyCodeLine{00024\ \ \ \ \ \mbox{\hyperlink{structShiftedOptions_a924733fdd2bcd5bc3f049e70a11a93c3}{ShiftedOptions}}(\mbox{\hyperlink{classMatrix}{Scalar}}\ \mbox{\hyperlink{classMatrix}{s}}\ =\ \mbox{\hyperlink{classMatrix}{Scalar}}(0))}
-\DoxyCodeLine{00025\ \ \ \ \ \ \ \ \ :\ \mbox{\hyperlink{structShiftedOptions_a3ab5be84578ea7326005a45160fdc7cd}{shift}}(\mbox{\hyperlink{classMatrix}{s}})}
-\DoxyCodeLine{00026\ \ \ \ \ \{\}}
-\DoxyCodeLine{00027\ \};}
+\DoxyCodeLine{00003\ \textcolor{preprocessor}{\#include\ "{}../core/types.hpp"{}}}
+\DoxyCodeLine{00004\ }
+\DoxyCodeLine{00020\ \textcolor{keyword}{template}\ <ScalarConcept\ Scalar>}
+\DoxyCodeLine{00021\ \textcolor{keyword}{struct\ }\mbox{\hyperlink{structShiftedOptions}{ShiftedOptions}}\ \{}
+\DoxyCodeLine{00023\ \ \ \ \ Scalar\ \mbox{\hyperlink{structShiftedOptions_a3ab5be84578ea7326005a45160fdc7cd}{shift}};}
+\DoxyCodeLine{00024\ }
+\DoxyCodeLine{00026\ \ \ \ \ \mbox{\hyperlink{structShiftedOptions_a924733fdd2bcd5bc3f049e70a11a93c3}{ShiftedOptions}}(Scalar\ \mbox{\hyperlink{classMatrix}{s}}\ =\ Scalar(0))}
+\DoxyCodeLine{00027\ \ \ \ \ \ \ \ \ :\ \mbox{\hyperlink{structShiftedOptions_a3ab5be84578ea7326005a45160fdc7cd}{shift}}(\mbox{\hyperlink{classMatrix}{s}})}
+\DoxyCodeLine{00028\ \ \ \ \ \{\}}
+\DoxyCodeLine{00029\ \};}
 
 \end{DoxyCode}
