--- a/latex/matrix_8hpp.tex
+++ b/latex/matrix_8hpp.tex
@@ -7,6 +7,7 @@
 
 {\ttfamily \#include "{}box.\+hpp"{}}\newline
 {\ttfamily \#include "{}box\+\_\+typed.\+hpp"{}}\newline
+{\ttfamily \#include "{}../core/types.\+hpp"{}}\newline
 {\ttfamily \#include $<$Eigen/\+Dense$>$}\newline
 {\ttfamily \#include $<$Eigen/\+Sparse$>$}\newline
 {\ttfamily \#include $<$memory$>$}\newline
@@ -15,6 +16,8 @@
 {\ttfamily \#include $<$cstddef$>$}\newline
 Include dependency graph for matrix.\+hpp\+:
 % FIG 0
+This graph shows which files directly or indirectly include this file\+:
+% FIG 1
 \doxysubsubsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
