--- a/latex/structShiftedOptions.tex
+++ b/latex/structShiftedOptions.tex
@@ -9,22 +9,26 @@ Options for solvers that use a spectral shift (\doxylink{classMatrix_a12d35ef182
 
 {\ttfamily \#include $<$shifted\+\_\+option.\+hpp$>$}
 
+
+
+Collaboration diagram for Shifted\+Options\texorpdfstring{$<$}{<} Scalar \texorpdfstring{$>$}{>}\+:
+% FIG 0
 \doxysubsubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{structShiftedOptions_a924733fdd2bcd5bc3f049e70a11a93c3}\label{structShiftedOptions_a924733fdd2bcd5bc3f049e70a11a93c3} 
-{\bfseries Shifted\+Options} (\mbox{\hyperlink{classMatrix}{Scalar}} \mbox{\hyperlink{classMatrix}{s}}=\mbox{\hyperlink{classMatrix}{Scalar}}(0))
+{\bfseries Shifted\+Options} (Scalar \mbox{\hyperlink{classMatrix}{s}}=Scalar(0))
 \begin{DoxyCompactList}\small\item\em Constructor (defaults to shift = 0). \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{structShiftedOptions_a3ab5be84578ea7326005a45160fdc7cd}\label{structShiftedOptions_a3ab5be84578ea7326005a45160fdc7cd} 
-\mbox{\hyperlink{classMatrix}{Scalar}} {\bfseries shift}
+Scalar {\bfseries shift}
 \begin{DoxyCompactList}\small\item\em Value of the shift $\sigma$. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
-\subsubsection*{template$<$\mbox{\hyperlink{classMatrix}{typename}} \mbox{\hyperlink{classMatrix}{Scalar}}$>$\newline
+\subsubsection*{template$<$\mbox{\hyperlink{classMatrix}{Scalar\+Concept}} Scalar$>$\newline
 struct Shifted\+Options$<$ Scalar $>$}
 Options for solvers that use a spectral shift (\doxylink{classMatrix_a12d35ef1824cd847868a8703035b0d5d}{e.\+g}. shifted inverse power). 
 
